/* [START declaration] */
syntax = "proto3";
package com.vmware.blockchain.deployment.model;

import "concord_cluster.proto";
import "concord_model.proto";
import "core.proto";
import "configuration_service.proto";
/* [END declaration] */

/* [START java_declaration] */
option java_package = "com.vmware.blockchain.deployment.model";
option java_multiple_files = true;
/* [END java_declaration] */

/* [START messages] */
message ConcordAgentConfiguration {
    ConcordModelSpecification model = 1;
    Endpoint container_registry = 2;
    Endpoint fleet_service = 3;
    ConcordClusterIdentifier cluster = 4;
    int32 node = 5;
    Endpoint config_service = 6;
    ConfigurationSessionIdentifier configuration_session = 7;
}
/* [END messages] */
